Closed Bug 890783 Opened 13 years ago Closed 13 years ago

Assertion failure: "should have already reflowed the anonymous block child" (nsSVGTextFrame2 FrameIfAnonymousChildReflowed)

Categories

(Core :: SVG, defect)

x86_64
macOS
defect
Not set
critical

Tracking

()

RESOLVED FIXED
mozilla25

People

(Reporter: jruderman, Assigned: heycam)

References

Details

(Keywords: assertion, testcase)

Attachments

(3 files)

Attached file testcase
Assertion failure: false (should have already reflowed the anonymous block child), at layout/svg/nsSVGTextFrame2.cpp:428 This assertion was added in bug 885642.
Attached file stack
The problem is that we have a DidSetStyleContext on nsSVGTextFrame2 to have it be reflowed if it is non-display, but we weren't noticing when any child text frames of a non-display nsSVGTextFrame2 were restyled.
Assignee: nobody → cam
Status: NEW → ASSIGNED
Attachment #773032 - Flags: review?(roc)
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
Target Milestone: --- → mozilla25
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: