Bug 890783 - Reflow non-display SVG text when a child text frame is restyled. r=roc